--- a/textRecg/app/build.gradle
+++ b/textRecg/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-ml-vision:23.0.0'
+    implementation 'com.rmtheis:tess-two:9.0.0'
 
 }
 
