--- a/textRecg/app/build.gradle
+++ b/textRecg/app/build.gradle
@@ -29,6 +29,7 @@ android {
 
 dependencies {
 	//added
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
 	implementation 'io.fotoapparat:fotoapparat:2.7.0'
 	implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
